--- a/public/css/screen.scss
+++ b/public/css/screen.scss
@@ -16,6 +16,7 @@
 @import 'sass-modules/_panelList';
 @import 'sass-modules/_openLayers';
 @import 'sass-modules/_selector.scss';
+@import 'sass-modules/_schedule.scss';
 
 #marker {
     background: url('images/locationMarker-map.svg') left top no-repeat;
