--- a/public/css/sass-modules/_schedule.scss
+++ b/public/css/sass-modules/_schedule.scss
@@ -2,23 +2,31 @@
     &-container {
         margin: 0 0 0 3rem;
         max-width: 50rem;
-        > article {
-            margin: 2rem 0;
-            &:not(:first-child) {
-                border-top: (1rem/16) solid $cob-blue-dark;
-                padding: 2rem 0 0 0;
-            }
-            > .title {
-            }
-            > .dates {
 
-            }
-            > .description {
-                margin: 1rem 0;
-            }
-            > .geography {
-                display: none;
-            }
+    }
+    &-article {
+        margin: 2rem 0;
+        &:not(:first-child) {
+            border-top: (1rem/16) solid $cob-blue-dark;
+            padding: 2rem 0 0 0;
+        }
+
+        h2 {
+            border-top-width: (10rem/16);
+            border-top-style: solid;
+            border-color:inherit;
+        }
+        > .title {
+        }
+        > .dates {
+
+        }
+        > .description {
+            margin: 1rem 0;
+        }
+        > .geography {
+            display: none;
         }
     }
+
 }
