--- a/public/css/screen.scss
+++ b/public/css/screen.scss
@@ -14,6 +14,7 @@
 @import 'sass-modules/_tables';
 @import 'sass-modules/_panels';
 @import 'sass-modules/_panelList';
+@import 'sass-modules/_pillNav';
 @import 'sass-modules/_openLayers';
 @import 'sass-modules/_selector.scss';
 @import 'sass-modules/_schedule.scss';
