--- a/public/css/sass-modules/_panels.scss
+++ b/public/css/sass-modules/_panels.scss
@@ -164,7 +164,7 @@
         padding: .1rem 0 .5rem 0;
     }
 }
-.three-column > main > .headerBar {
+.eventsMap > main > .headerBar {
     margin-left: $filters-width;
 }
 .filterPanel {
