--- a/public/css/sass-modules/_footer.scss
+++ b/public/css/sass-modules/_footer.scss
@@ -1,5 +1,5 @@
 body {
-    &.three-column, &.schedule {
+    &.eventsMap, &.schedule {
         > footer {
             height: 13rem;
             position: absolute;
