--- a/public/css/sass-modules/_vars-mixins.scss
+++ b/public/css/sass-modules/_vars-mixins.scss
@@ -76,6 +76,7 @@ $size-font-default: 100%;
 $font-weight-heading: 600;
 
 
+
 // Font families
 $font-body-copy: 'PT Sans', Verdana, sans-serif;
 $font-headings: Lato, 'Helvetica Neue', Arial, sans-serif;
@@ -88,6 +89,8 @@ $window-small: (400em/16);
 
 // Values for absolute positioning
 $filters-width: 14.5rem;
+$siteHeaderHeight: 4.35rem;
+$headerBarHeight: 2rem;
 
 
 @mixin clearfix {
