--- a/public/css/sass-modules/_footer.scss
+++ b/public/css/sass-modules/_footer.scss
@@ -8,7 +8,7 @@ body {
             width: 14.5rem;
         }
     }
-    &.two-column {
+    &.viewSingle {
         > footer {
             height: 13rem;
             position: absolute;
