Pulled headerBar out into a block for all templates

--- a/public/css/sass-modules/_layout.scss
+++ b/public/css/sass-modules/_layout.scss
@@ -1,7 +1,7 @@
 .container.admin { }
 .admin #content-panel { }
 
-> .content-container {
+.content-container {
     position: absolute;
         top: 4.35rem;
         right: 0;
