Minor style tweaks.

--- a/public/css/sass-modules/_field.scss
+++ b/public/css/sass-modules/_field.scss
@@ -185,7 +185,9 @@ fieldset {
         }
         > dt {
             float: none;
+            margin-bottom: .5em;
             padding: 0;
+            width: auto;
         }
         > dd {
             margin-left: 0;
