Update background color of map div to match background color of new basemap layer.

--- a/public/css/sass-modules/_openLayers.scss
+++ b/public/css/sass-modules/_openLayers.scss
@@ -1,7 +1,7 @@
 // Overrides for OpenLayers
 
 .mapPanel {
-    background-color: #eeeeee; // <- color sampled from a screenshot of mapbox.light
+    background-color: #e8e0d8; // <- color sampled from a screenshot of mapbox.street
     .ol {
         &-control {
             background: none;
