Add edit icon for blue toolbars to repo

--- a/public/css/sass-modules/_panels.scss
+++ b/public/css/sass-modules/_panels.scss
@@ -109,8 +109,7 @@
                 }
             }
             &.edit {
-                // @TODO
-                // Need icon styles for edit button
+                background: url('images/pencil-white.svg') no-repeat 50% 50% / 80% 80%;
             }
             &.back {
                 &:before {
